# BoxLang

./: .gitignore  CLA.md  CONTRIBUTING.md  ISSUES.md  LICENSE  README.md
compiler/: Cargo.toml  test.box  test.c  test_hello  test_hello.ilk
compiler/src/: compilation_pipeline.rs  compiler_detector.rs  lib.rs  main.rs  ui.rs
compiler/src/ast/: mod.rs
compiler/src/codegen/: c.rs  mod.rs
compiler/src/codegen/cranelift/: mod.rs  translator.rs
compiler/src/codegen/llvm/: ir_builder.rs  jit.rs  mod.rs
compiler/src/ctfe/: mod.rs
compiler/src/diagnostics/: mod.rs
compiler/src/frontend/: mod.rs
compiler/src/frontend/lexer/: mod.rs  token.rs
compiler/src/frontend/parser/: expr.rs  item.rs  mod.rs  stmt.rs  ty.rs
compiler/src/integration/: appbox.rs  mod.rs
compiler/src/macros/: attr.rs  decl.rs  derive.rs  hygiene.rs  mod.rs
compiler/src/middle/: async_transform.rs  mod.rs
compiler/src/middle/borrowck/: check.rs  loan.rs  mod.rs  nll.rs
compiler/src/middle/mir/: builder.rs  mod.rs
compiler/src/middle/mir/optimize/: const_fold.rs  const_prop.rs  const_prop_advanced.rs  cse.rs  dead_code.rs  dead_code_advanced.rs  inline.rs  licm.rs  mod.rs  simplify_cfg.rs
compiler/src/middle/query/: mod.rs
compiler/src/module/: graph.rs  loader.rs  mod.rs  resolver.rs
compiler/src/runtime/: channel.rs  future.rs  memory.rs  mod.rs  scheduler.rs
compiler/src/ty/: conversion.rs  mod.rs
compiler/src/typeck/: check.rs  error.rs  mod.rs  sym.rs  ty.rs  typeclass.rs
compiler/src/util/: arena.rs  mod.rs
compiler/wix/: License.rtf  main.wxs
docs/: TUTORIAL.md  (+4 more)
(+46 files in other folders)
