[package]
name = "boxlang-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Box Ecosystem Team"]
description = "BoxLang Compiler - A systems programming language for Box Ecosystem"
license = "MIT"

[[bin]]
name = "boxlang"
path = "src/main.rs"

[dependencies]
# CLI and error handling
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Lexer
logos = "0.14"

# Code generation backends
# Cranelift for fast debug builds
cranelift = "0.113"
cranelift-module = "0.113"
cranelift-codegen = "0.113"
cranelift-frontend = "0.113"
cranelift-native = "0.113"
cranelift-jit = "0.113"

# LLVM for optimized release builds (optional)
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
indexmap = "2.2"
smol_str = "0.2"
num_cpus = "1.16"

# Integration
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[features]
default = []
inkwell = ["dep:inkwell"]

[dev-dependencies]
insta = "1.39"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
